--- a/index.html
+++ b/index.html
@@ -117,6 +117,22 @@
                     <a href="#">Add to cart</a>
                 </div>
             </div>
+            <div class="box">
+                <img src="img/Caffe_7" alt="">
+                <h3>Americano Pure</h3>
+                <div class="content">
+                    <span>$25</span>
+                    <a href="#">Add to cart</a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/Caffe_8" alt="">
+                <h3>Americano Pure</h3>
+                <div class="content">
+                    <span>$25</span>
+                    <a href="#">Add to cart</a>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Customers -->
@@ -206,20 +222,7 @@
     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- Link To JS -->
+ <!-- Link To JS -->
     <script src="main.js"></script>
 </body>
 </html>
